--- a/app/src/main/res/layout/movie_page.xml
+++ b/app/src/main/res/layout/movie_page.xml
@@ -13,7 +13,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/movie_title"
-            android:src="@mipmap/movie_image" />
+            tools:src="@mipmap/movie_image"
+            tools:contentDescription="TODO" />
 
     <TextView
             android:id="@+id/movie_title"
@@ -25,7 +26,7 @@
             app:layout_constraintBottom_toTopOf="@id/movie_type"
             tools:text="Опасные иллюзии" />
 
-    <TextView
+    <Button
             android:id="@+id/movie_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -36,7 +37,7 @@
             android:background="@color/purple_700"
             tools:text="Фильм" />
 
-    <TextView
+    <Button
             android:id="@+id/movie_rating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,55 +51,98 @@
     <Button
             android:id="@+id/play_button"
             app:layout_constraintTop_toBottomOf="@id/movie_type"
-            app:layout_constraintBottom_toTopOf="@id/movie_info"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/add_favourite_button"
             android:layout_width="wrap_content"
+            tools:text="PLAY"
             android:layout_height="wrap_content" />
 
     <Button
             android:id="@+id/add_favourite_button"
             app:layout_constraintTop_toBottomOf="@id/movie_type"
-            app:layout_constraintBottom_toTopOf="@id/movie_info"
             app:layout_constraintStart_toEndOf="@id/play_button"
             app:layout_constraintEnd_toStartOf="@id/like_button"
             android:layout_width="wrap_content"
+            tools:text="FAV"
             android:layout_height="wrap_content" />
 
     <Button
             android:id="@+id/like_button"
             app:layout_constraintTop_toBottomOf="@id/movie_type"
-            app:layout_constraintBottom_toTopOf="@id/movie_info"
             app:layout_constraintStart_toEndOf="@id/add_favourite_button"
             app:layout_constraintEnd_toStartOf="@id/dislike_button"
+            tools:text="LIKE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
     <Button
             android:id="@+id/dislike_button"
             app:layout_constraintTop_toBottomOf="@id/movie_type"
-            app:layout_constraintBottom_toTopOf="@id/movie_info"
             app:layout_constraintStart_toEndOf="@id/like_button"
             app:layout_constraintEnd_toEndOf="parent"
+            tools:text="DISLIKE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
     <TextView
-            android:id="@+id/movie_info"
+            android:id="@+id/movie_year"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/movie_rating"
+            android:layout_marginLeft="16dp"
+            app:layout_constraintTop_toBottomOf="@id/play_button"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/movie_description"
-            tools:text="Год: 2021  Жанр: Боевики, Семейные\nРежиссёр: Анна Элизабет Джеймс\nСтраны: США" />
+            tools:text="Год: 2021" />
 
     <TextView
-            android:id="@+id/movie_description"
+            android:id="@+id/movie_genres"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/movie_info"
+            app:layout_constraintTop_toBottomOf="@id/play_button"
+            app:layout_constraintStart_toEndOf="@id/movie_year"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="Жанр: Боевики, Семейные" />
+
+    <TextView
+            android:id="@+id/movie_director"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/movie_year"
+            app:layout_constraintStart_toStartOf="@id/movie_year"
+            tools:text="Режиссёр: Анна Элизабет Джеймс" />
+
+
+    <TextView
+            android:id="@+id/movie_countries"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/movie_director"
+            app:layout_constraintStart_toStartOf="@id/movie_year"
+            tools:text="Страны: США" />
+
+
+    <TextView
+            android:id="@+id/movie_actors"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/movie_countries"
+            app:layout_constraintStart_toStartOf="@id/movie_year"
+            tools:text="В главных ролях:\n\tСи Джей Перри,\n\tРойс Пирресон,\n\tЛеонардо Ди Каприо" />
+
+
+    <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/movie_actors"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            tools:text="Известная писательница переживает творческий кризис. Она нанимает для своих детей новую няню и начинает терять грань между реальностью и вымышленным миром." />
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
+
+        <TextView
+                android:id="@+id/movie_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Известная писательница переживает творческий кризис. Она нанимает для своих детей новую няню и начинает терять грань между реальностью и вымышленным миром." />
+
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
