RED-5: added icons and colors

--- a/app/src/main/res/layout/movie_page.xml
+++ b/app/src/main/res/layout/movie_page.xml
@@ -8,10 +8,11 @@
     <ImageView
             android:id="@+id/movie_image"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="250dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="centerCrop"
             app:layout_constraintBottom_toTopOf="@id/movie_title"
             tools:src="@mipmap/movie_image"
             tools:contentDescription="TODO" />
@@ -24,6 +25,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/movie_type"
+            android:textSize="30sp"
+            android:textStyle="bold"
             tools:text="Опасные иллюзии" />
 
     <Button
