--- a/app/src/main/res/layout/movie_page.xml
+++ b/app/src/main/res/layout/movie_page.xml
@@ -26,6 +26,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toTopOf="@id/movie_type"
             android:textSize="30sp"
+            android:layout_marginTop="10sp"
+            android:layout_marginBottom="10sp"
             android:textStyle="bold"
             tools:text="Опасные иллюзии" />
 
@@ -35,7 +37,6 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/movie_rating"
-            app:layout_constraintBottom_toTopOf="@id/play_button"
             app:layout_constraintTop_toBottomOf="@id/movie_title"
             android:background="@color/purple_700"
             tools:text="Фильм" />
@@ -47,16 +48,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/movie_type"
             app:layout_constraintTop_toBottomOf="@id/movie_title"
-            app:layout_constraintBottom_toTopOf="@id/play_button"
             android:background="@color/purple_700"
             tools:text="5/10" />
 
     <Button
             android:id="@+id/play_button"
-            app:layout_constraintTop_toBottomOf="@id/movie_type"
             app:layout_constraintStart_toStartOf="parent"
-            android:background="@android:color/transparent"
             app:layout_constraintEnd_toStartOf="@id/add_favourite_button"
+            app:layout_constraintTop_toBottomOf="@id/movie_type"
+            app:layout_constraintBottom_toTopOf="@id/movie_year"
+            android:background="@android:color/transparent"
             android:layout_width="wrap_content"
             android:drawableTop="@drawable/ic_play"
             android:textSize="0sp"
@@ -67,6 +68,7 @@
             app:layout_constraintTop_toBottomOf="@id/movie_type"
             app:layout_constraintStart_toEndOf="@id/play_button"
             app:layout_constraintEnd_toStartOf="@id/like_button"
+            app:layout_constraintBottom_toTopOf="@id/movie_year"
             android:textSize="0sp"
             android:layout_width="wrap_content"
             android:drawableTop="@drawable/ic_favourite"
@@ -78,6 +80,7 @@
             app:layout_constraintTop_toBottomOf="@id/movie_type"
             app:layout_constraintStart_toEndOf="@id/add_favourite_button"
             app:layout_constraintEnd_toStartOf="@id/dislike_button"
+            app:layout_constraintBottom_toTopOf="@id/movie_year"
             android:drawableTop="@drawable/ic_like"
             android:textSize="0sp"
             android:background="@android:color/transparent"
@@ -88,8 +91,9 @@
             android:id="@+id/dislike_button"
             app:layout_constraintTop_toBottomOf="@id/movie_type"
             app:layout_constraintStart_toEndOf="@id/like_button"
-            android:textSize="0sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/movie_year"
+            android:textSize="0sp"
             android:drawableTop="@drawable/ic_dislike"
             android:background="@android:color/transparent"
             android:layout_width="wrap_content"
@@ -102,6 +106,8 @@
             android:layout_marginLeft="16dp"
             app:layout_constraintTop_toBottomOf="@id/play_button"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/movie_director"
+            app:layout_constraintEnd_toStartOf="@id/movie_genres"
             tools:text="Год: 2021" />
 
     <TextView
@@ -111,6 +117,7 @@
             app:layout_constraintTop_toBottomOf="@id/play_button"
             app:layout_constraintStart_toEndOf="@id/movie_year"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/movie_director"
             tools:text="Жанр: Боевики, Семейные" />
 
     <TextView
@@ -118,6 +125,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/movie_year"
+            app:layout_constraintBottom_toTopOf="@id/movie_countries"
             app:layout_constraintStart_toStartOf="@id/movie_year"
             tools:text="Режиссёр: Анна Элизабет Джеймс" />
 
@@ -128,6 +136,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/movie_director"
             app:layout_constraintStart_toStartOf="@id/movie_year"
+            app:layout_constraintBottom_toTopOf="@id/movie_actors"
             tools:text="Страны: США" />
 
 
@@ -137,11 +146,14 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/movie_countries"
             app:layout_constraintStart_toStartOf="@id/movie_year"
+            app:layout_constraintBottom_toTopOf="@id/movie_description_wrapper"
             tools:text="В главных ролях:\n\tСи Джей Перри,\n\tРойс Пирресон,\n\tЛеонардо Ди Каприо" />
 
 
     <ScrollView
+            android:id="@+id/movie_description_wrapper"
             android:layout_width="wrap_content"
+            android:layout_marginTop="10sp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/movie_actors"
             app:layout_constraintStart_toStartOf="parent"
@@ -153,6 +165,7 @@
                 android:id="@+id/movie_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="15sp"
                 tools:text="Известная писательница переживает творческий кризис. Она нанимает для своих детей новую няню и начинает терять грань между реальностью и вымышленным миром." />
 
     </ScrollView>
