--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,5 +15,6 @@
         <item name="android:windowBackground">@color/redioteka_back</item>
         <item name="android:textColor">@color/white</item>
         <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">14sp</item>
     </style>
 </resources>
