RED-18: Добавить bottom navigation view и исправить на фрагменты

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Redioteka" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Redioteka" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/redioteka_red</item>
         <item name="colorPrimaryVariant">@color/redioteka_red</item>
