--- a/app/src/main/res/layout/movie_page.xml
+++ b/app/src/main/res/layout/movie_page.xml
@@ -5,168 +5,173 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <ImageView
-            android:id="@+id/movie_image"
-            android:layout_width="wrap_content"
-            android:layout_height="250dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toTopOf="@id/movie_title"
-            tools:src="@mipmap/movie_image"
-            tools:contentDescription="TODO" />
-
-    <TextView
-            android:id="@+id/movie_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/movie_image"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/movie_type"
-            android:textSize="30sp"
-            android:layout_marginTop="10sp"
-            android:layout_marginBottom="10sp"
-            android:textStyle="bold"
-            tools:text="Опасные иллюзии" />
-
-    <Button
-            android:id="@+id/movie_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/movie_rating"
-            app:layout_constraintTop_toBottomOf="@id/movie_title"
-            android:background="@color/purple_700"
-            tools:text="Фильм" />
-
-    <Button
-            android:id="@+id/movie_rating"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/movie_type"
-            app:layout_constraintTop_toBottomOf="@id/movie_title"
-            android:background="@color/purple_700"
-            tools:text="5/10" />
-
-    <Button
-            android:id="@+id/play_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/add_favourite_button"
-            app:layout_constraintTop_toBottomOf="@id/movie_type"
-            app:layout_constraintBottom_toTopOf="@id/movie_year"
-            android:background="@android:color/transparent"
-            android:layout_width="wrap_content"
-            android:drawableTop="@drawable/ic_play"
-            android:textSize="0sp"
-            android:layout_height="wrap_content" />
-
-    <Button
-            android:id="@+id/add_favourite_button"
-            app:layout_constraintTop_toBottomOf="@id/movie_type"
-            app:layout_constraintStart_toEndOf="@id/play_button"
-            app:layout_constraintEnd_toStartOf="@id/like_button"
-            app:layout_constraintBottom_toTopOf="@id/movie_year"
-            android:textSize="0sp"
-            android:layout_width="wrap_content"
-            android:drawableTop="@drawable/ic_favourite"
-            android:background="@android:color/transparent"
-            android:layout_height="wrap_content" />
-
-    <Button
-            android:id="@+id/like_button"
-            app:layout_constraintTop_toBottomOf="@id/movie_type"
-            app:layout_constraintStart_toEndOf="@id/add_favourite_button"
-            app:layout_constraintEnd_toStartOf="@id/dislike_button"
-            app:layout_constraintBottom_toTopOf="@id/movie_year"
-            android:drawableTop="@drawable/ic_like"
-            android:textSize="0sp"
-            android:background="@android:color/transparent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    <Button
-            android:id="@+id/dislike_button"
-            app:layout_constraintTop_toBottomOf="@id/movie_type"
-            app:layout_constraintStart_toEndOf="@id/like_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/movie_year"
-            android:textSize="0sp"
-            android:drawableTop="@drawable/ic_dislike"
-            android:background="@android:color/transparent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    <TextView
-            android:id="@+id/movie_year"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            app:layout_constraintTop_toBottomOf="@id/play_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/movie_director"
-            app:layout_constraintEnd_toStartOf="@id/movie_genres"
-            tools:text="Год: 2021" />
-
-    <TextView
-            android:id="@+id/movie_genres"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/play_button"
-            app:layout_constraintStart_toEndOf="@id/movie_year"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/movie_director"
-            tools:text="Жанр: Боевики, Семейные" />
-
-    <TextView
-            android:id="@+id/movie_director"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/movie_year"
-            app:layout_constraintBottom_toTopOf="@id/movie_countries"
-            app:layout_constraintStart_toStartOf="@id/movie_year"
-            tools:text="Режиссёр: Анна Элизабет Джеймс" />
-
-
-    <TextView
-            android:id="@+id/movie_countries"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/movie_director"
-            app:layout_constraintStart_toStartOf="@id/movie_year"
-            app:layout_constraintBottom_toTopOf="@id/movie_actors"
-            tools:text="Страны: США" />
-
-
-    <TextView
-            android:id="@+id/movie_actors"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/movie_countries"
-            app:layout_constraintStart_toStartOf="@id/movie_year"
-            app:layout_constraintBottom_toTopOf="@id/movie_description_wrapper"
-            tools:text="В главных ролях:\n\tСи Джей Перри,\n\tРойс Пирресон,\n\tЛеонардо Ди Каприо" />
-
-
     <ScrollView
-            android:id="@+id/movie_description_wrapper"
-            android:layout_width="wrap_content"
-            android:layout_marginTop="10sp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/movie_actors"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-                android:id="@+id/movie_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                tools:text="Известная писательница переживает творческий кризис. Она нанимает для своих детей новую няню и начинает терять грань между реальностью и вымышленным миром." />
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+            <ImageView
+                    android:id="@+id/movie_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="250dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toTopOf="@id/movie_title"
+                    tools:src="@mipmap/movie_image"
+                    tools:contentDescription="TODO" />
+
+            <TextView
+                    android:id="@+id/movie_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/movie_image"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/movie_type"
+                    android:textSize="30sp"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginBottom="10sp"
+                    android:textStyle="bold"
+                    tools:text="Опасные иллюзии" />
+
+            <Button
+                    android:id="@+id/movie_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/movie_rating"
+                    app:layout_constraintTop_toBottomOf="@id/movie_title"
+                    android:background="@color/purple_700"
+                    tools:text="Фильм" />
+
+            <Button
+                    android:id="@+id/movie_rating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/movie_type"
+                    app:layout_constraintTop_toBottomOf="@id/movie_title"
+                    android:background="@color/purple_700"
+                    tools:text="5/10" />
+
+            <Button
+                    android:id="@+id/play_button"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/add_favourite_button"
+                    app:layout_constraintTop_toBottomOf="@id/movie_type"
+                    app:layout_constraintBottom_toTopOf="@id/movie_year"
+                    android:background="@android:color/transparent"
+                    android:layout_width="wrap_content"
+                    android:drawableTop="@drawable/ic_play"
+                    android:textSize="0sp"
+                    android:layout_height="wrap_content" />
+
+            <Button
+                    android:id="@+id/add_favourite_button"
+                    app:layout_constraintTop_toBottomOf="@id/movie_type"
+                    app:layout_constraintStart_toEndOf="@id/play_button"
+                    app:layout_constraintEnd_toStartOf="@id/like_button"
+                    app:layout_constraintBottom_toTopOf="@id/movie_year"
+                    android:textSize="0sp"
+                    android:layout_width="wrap_content"
+                    android:drawableTop="@drawable/ic_favourite"
+                    android:background="@android:color/transparent"
+                    android:layout_height="wrap_content" />
+
+            <Button
+                    android:id="@+id/like_button"
+                    app:layout_constraintTop_toBottomOf="@id/movie_type"
+                    app:layout_constraintStart_toEndOf="@id/add_favourite_button"
+                    app:layout_constraintEnd_toStartOf="@id/dislike_button"
+                    app:layout_constraintBottom_toTopOf="@id/movie_year"
+                    android:drawableTop="@drawable/ic_like"
+                    android:textSize="0sp"
+                    android:background="@android:color/transparent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            <Button
+                    android:id="@+id/dislike_button"
+                    app:layout_constraintTop_toBottomOf="@id/movie_type"
+                    app:layout_constraintStart_toEndOf="@id/like_button"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/movie_year"
+                    android:textSize="0sp"
+                    android:drawableTop="@drawable/ic_dislike"
+                    android:background="@android:color/transparent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            <TextView
+                    android:id="@+id/movie_year"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/play_button"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginStart="10sp"
+                    tools:text="Год: 2021" />
+
+            <TextView
+                    android:id="@+id/movie_genres"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/movie_year"
+                    app:layout_constraintStart_toStartOf="@id/movie_year"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginBottom="20sp"
+                    android:textSize="20sp"
+                    tools:text="Жанр: Боевики, Семейные" />
+
+            <TextView
+                    android:id="@+id/movie_director"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10sp"
+                    app:layout_constraintTop_toBottomOf="@id/movie_genres"
+                    app:layout_constraintStart_toStartOf="@id/movie_year"
+                    android:textSize="20sp"
+                    tools:text="Режиссёр: Анна Элизабет Джеймс" />
+
+
+            <TextView
+                    android:id="@+id/movie_countries"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/movie_director"
+                    android:layout_marginTop="10sp"
+                    app:layout_constraintStart_toStartOf="@id/movie_year"
+                    android:textSize="20sp"
+                    tools:text="Страны: США" />
+
+
+            <TextView
+                    android:id="@+id/movie_actors"
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="10sp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/movie_countries"
+                    app:layout_constraintStart_toStartOf="@id/movie_year"
+                    android:textSize="20sp"
+                    tools:text="В главных ролях:\n\tСи Джей Перри,\n\tРойс Пирресон,\n\tЛеонардо Ди Каприо" />
+
+            <TextView
+                    android:id="@+id/movie_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5sp"
+                    android:layout_marginTop="10sp"
+                    app:layout_constraintTop_toBottomOf="@id/movie_actors"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="18sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="Известная писательница переживает творческий кризис. Она нанимает для своих детей новую няню и начинает терять грань между реальностью и вымышленным миром." />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
