RED-18: Исправить иконки в bottom view и добавить заголовки на страницах

--- a/app/src/main/res/layout/activity_with_bottom.xml
+++ b/app/src/main/res/layout/activity_with_bottom.xml
@@ -16,7 +16,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintLeft_toRightOf="parent"
             app:menu="@menu/menu"
-            android:background="@color/background"
+            android:background="#07090B"
+            app:itemTextColor="@color/white"
             />
     <FrameLayout
             android:layout_width="match_parent"
