--- a/app/src/main/res/layout/movie_view.xml
+++ b/app/src/main/res/layout/movie_view.xml
@@ -6,6 +6,22 @@
         android:layout_height="match_parent"
         android:background="@color/background">
 
+    <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+        android:id="@+id/header_title"
+        android:text="Фильмы"
+            android:textSize="38sp"
+            android:fontFamily="@font/montserrat_medium"
+            android:textColor="@color/white"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/movie_recycler"
+            android:layout_marginStart="10sp"
+            android:layout_marginBottom="10sp"
+            android:layout_marginTop="10sp"/>
+
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movie_recycler"
             android:layout_width="0dp"
@@ -14,7 +30,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/header_title"
             app:layout_constraintVertical_bias="1.0"
             tools:listitem="@layout/movie_item" />
 
