RED-18: Изменить размер иконок в bottom nav view

--- a/app/src/main/res/layout/activity_with_bottom.xml
+++ b/app/src/main/res/layout/activity_with_bottom.xml
@@ -18,6 +18,7 @@
             app:menu="@menu/menu"
             android:background="#07090B"
             app:itemTextColor="@color/white"
+            app:itemIconSize="40sp"
             />
     <FrameLayout
             android:layout_width="match_parent"
